add router for images
